--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+sdl2 = "0.34.0"
+rand = "=0.7.3"
 
 [dependencies.bitflags]
 version = "2.8.0"
