--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,8 @@ edition = "2021"
 sdl2 = "0.34.0"
 rand = "=0.7.3"
 lazy_static = "1.5.0"
+log = "0.4"
+env_logger = "0.10"
 
 [dependencies.bitflags]
 version = "2.8.0"
