--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,6 @@ target/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 .vscode
+
+# So no games can be submitted to github
+*.nes
